# kanelsnurrer

./: Cargo.toml  material_definitions.txt  test.txt
assets/materials/: mod.ron
assets/materials/down_stair/: mod.ron
assets/materials/floor/: mod.ron
assets/materials/floor/inorganic/: limestone.ron  rock_salt.ron  sandy_clay.ron
assets/materials/floor/plant/: cattail.ron  common reed.ron  marsh thistle.ron  meadowsweet.ron  mod.ron  purple moor grass.ron  rush.ron
assets/materials/inorganic/: mod.ron
assets/materials/up_down_stair/: mod.ron
assets/materials/wall/: mod.ron
assets/materials/wall/inorganic/: mod.ron  rock_salt.ron  sand_tan.ron  sandy_clay.ron
assets/materials/wall/plant/: apple.ron  ash.ron  cherry.ron  hazel.ron  mod.ron  oak.ron  (+3 more)
assets/models/: down_stair.mtl  mod.json  mod.ron  tall_vegetation_floor.ron  up_down_stair.mtl
assets/models/inorganic/: alexandrite.ron  mod.ron
assets/shaders/tmp/: shader.wgsl
model_system/: Cargo.toml
model_system/src/: lib.rs
model_system/src/format/: mod.rs
model_system/src/loading/: mod.rs  model_files.rs  scanner.rs
model_system/src/naming/: mod.rs
model_system/test_files/: mod.json
src/: main.rs
src/loaders/: mod.rs  model_loader.rs  old_model_loader.rs
src/util/: cache.rs  client_pool.rs  display_iter.rs  event_queue.rs  mesh_loader.rs  mod.rs  result_ext.rs
src/voxel/: material.rs  mod.rs  model_storage.rs
src/world/: mod.rs
src/world/events/: chunk_builder.rs  chunk_loading.rs  mod.rs
src/world/meshing/: mod.rs
src/world/tile/: material_identifier.rs  mod.rs
