[package]
name = "volum2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
df-rust = { git="https://github.com/ReddikHaien/df-rust.git", rev="6bcf2e8" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
futures-lite = "1.12.0"