[package]
name = "volum2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
bevy = "0.9.1"
df-rust = { git="https://github.com/ReddikHaien/df-rust.git", rev="6bcf2e8" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
futures-lite = "1.12.0"
model_system = {path = "./model_system"}

[workspace]
members = [
    "./model_system"
]